// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`walk > .gitkeep files are not included in the file tree 1`] = `
[
  {
    "blocks": 1,
    "children": [],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
]
`;

exports[`walk > .meta files are not included in the file tree 1`] = `
[
  {
    "blocks": 1,
    "children": [],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return a valid file tree with a default owner/root based on the home directory 1`] = `
[
  {
    "blocks": 1,
    "children": [
      {
        "blocks": 1,
        "children": [],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": "bar",
        "owner": "root",
        "path": "foo",
        "permissions": [
          7,
          5,
          5,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
  {
    "blocks": 1,
    "children": [
      {
        "blocks": 1,
        "children": [
          {
            "blocks": 1,
            "children": undefined,
            "group": "bazzing.gaz",
            "isDirectory": false,
            "lastModifiedTime": 2020-01-01T00:00:00.000Z,
            "name": "bazzing.gaz",
            "owner": "bazzing.gaz",
            "path": "some/home",
            "permissions": [
              6,
              6,
              4,
            ],
            "size": 0,
          },
          {
            "blocks": 1,
            "children": [
              {
                "blocks": 1,
                "children": undefined,
                "group": "daz",
                "isDirectory": false,
                "lastModifiedTime": 2020-01-01T00:00:00.000Z,
                "name": "test",
                "owner": "daz",
                "path": "some/home/daz",
                "permissions": [
                  6,
                  6,
                  4,
                ],
                "size": 0,
              },
            ],
            "group": "daz",
            "isDirectory": true,
            "lastModifiedTime": 2020-01-01T00:00:00.000Z,
            "name": "daz",
            "owner": "daz",
            "path": "some/home",
            "permissions": [
              7,
              7,
              5,
            ],
            "size": 0,
          },
          {
            "blocks": 1,
            "children": [
              {
                "blocks": 1,
                "children": undefined,
                "group": "gaz",
                "isDirectory": false,
                "lastModifiedTime": 2020-01-01T00:00:00.000Z,
                "name": "test",
                "owner": "gaz",
                "path": "some/home/gaz",
                "permissions": [
                  6,
                  6,
                  4,
                ],
                "size": 0,
              },
            ],
            "group": "gaz",
            "isDirectory": true,
            "lastModifiedTime": 2020-01-01T00:00:00.000Z,
            "name": "gaz",
            "owner": "gaz",
            "path": "some/home",
            "permissions": [
              7,
              7,
              5,
            ],
            "size": 0,
          },
        ],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": "home",
        "owner": "root",
        "path": "some",
        "permissions": [
          7,
          5,
          5,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "some",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return a valid file tree with data from a .meta file 1`] = `
[
  {
    "blocks": 1,
    "children": [
      {
        "blocks": 1,
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": "baz.txt",
        "owner": "some value",
        "path": "bar",
        "permissions": [
          4,
          5,
          6,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "bar",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
  {
    "blocks": 1,
    "children": [],
    "group": "ing",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "foo",
    "owner": "test",
    "path": "",
    "permissions": [
      1,
      2,
      3,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return the correct file tree 1`] = `
[
  {
    "blocks": 1,
    "children": undefined,
    "group": "root",
    "isDirectory": false,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "bazzing.gaz",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
  {
    "blocks": 1,
    "children": [
      {
        "blocks": 1,
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": ".testing",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
      {
        "blocks": 1,
        "children": [],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": "bar",
        "owner": "root",
        "path": "foo",
        "permissions": [
          7,
          5,
          5,
        ],
        "size": 0,
      },
      {
        "blocks": 1,
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": 2020-01-01T00:00:00.000Z,
        "name": "daz",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": 2020-01-01T00:00:00.000Z,
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      7,
      5,
      5,
    ],
    "size": 0,
  },
]
`;
